--- a/templates/brawl/base.html
+++ b/templates/brawl/base.html
@@ -17,6 +17,7 @@
       <title>
           Brawl Banlist Checker
       </title>
+      <link rel="icon" type="image/x-icon" href="{% static 'images/Brawl.ico' %}">
     </head>
     <body>
         <div class="background">
