--- a/templates/brawl/home.html
+++ b/templates/brawl/home.html
@@ -22,13 +22,13 @@
 
             <div class="row">
                 <div class="col">
-                    <h4 class="errors"></h4>
+                    <p class="errors"></p>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col up">
-                    <textarea class="deck_box" rows="" cols="1" minlength="1000" placeholder="1 Adarkar Wastes (M3C) 316
+                    <textarea id="deck_box" rows="" cols="1" minlength="1000" placeholder="1 Adarkar Wastes (M3C) 316
 1 Anguished Unmaking (PIP) 473 *F*
 1 Archon of Emeria (MB2) 4
 1 Arid Mesa (MH2) 244
