--- a/templates/brawl/home.html
+++ b/templates/brawl/home.html
@@ -17,7 +17,7 @@
         <div class="box_body">
             <div class="row">
                 <h4 class="up">Enter your deck list here</h4>
-                <p>(Must include quantity and card name)</p>
+                <p>(Must follow the format provided)</p>
             </div>
 
             <div class="row">
