--- a/templates/brawl/home.html
+++ b/templates/brawl/home.html
@@ -13,8 +13,8 @@
     <div class="container">
         <h1 class="title">Glasgow Brawl Banlist Checker</h1>
     </div>
-    <div class="container main_body form_holder">
-        <div class="box_body">
+    <div class="container-xxl main_body form_holder">
+        <div class="row mx-auto box_body">
             <div class="row">
                 <h4 class="up">Enter your deck list here</h4>
                 <p>(Must follow the format provided)</p>
@@ -28,7 +28,7 @@
 
             <div class="row">
                 <div class="col up">
-                    <textarea id="deck_box" rows="" cols="1" minlength="1000" placeholder="1 Adarkar Wastes (M3C) 316
+                    <textarea id="deck_box" placeholder="1 Adarkar Wastes (M3C) 316
 1 Anguished Unmaking (PIP) 473 *F*
 1 Archon of Emeria (MB2) 4
 1 Arid Mesa (MH2) 244
@@ -39,7 +39,7 @@
             </div>
             <div class="row button_row up">
                 <div class="col d-grid">
-                    <button class="btn submit_button validate_button">Submit</button>
+                    <button class="btn submit_button validate_button mx-auto">Submit</button>
                 </div>
             </div>
             
