--- a/static/css/template_box.css
+++ b/static/css/template_box.css
@@ -7,6 +7,7 @@
     text-align: center;
     padding-top: 5px;
     min-height: 100px;
+    max-width: 600px;
 }
 
 .down {
@@ -26,11 +27,19 @@
     text-align: center;
 }
 
+.box {
+    outline-width: 1px;
+    outline: 1px;
+    outline-style: solid;
+    outline-color: black;
+}
+
 textarea {
     width: auto;
-    min-width: 1100px;
     min-height: 150px;
+    box-sizing: border-box;
 }
+
 
 .button_row {
     padding-left: 15px;
