--- a/static/css/template_box.css
+++ b/static/css/template_box.css
@@ -10,6 +10,17 @@
     max-width: 600px;
 }
 
+.box_body_big {
+    outline-width: 1px;
+    outline: 1px;
+    outline-style: solid;
+    outline-color: black;
+    background-color: #cae6dd;
+    text-align: center;
+    padding-top: 5px;
+    min-height: 100px;
+}
+
 .down {
     padding-top: 20px;
 }
