Added win/loses to the database

--- a/templates/brawl/base.html
+++ b/templates/brawl/base.html
@@ -24,6 +24,8 @@
         <!-- This code is a modified version of the bootstrap template for the nav bar -->
         <nav class="navbar navbar-expand-md header">
             <div class="container-xxl">
+              <a class="nav-link header_text col-lg-1 col-md-2 col-sm-3 col-4" href="{% url 'brawl:events' %}">Past Events</a>
+              <a class="nav-link header_text col-lg-11 col-md-10 col-sm-9 col-8" href="{% url 'brawl:home' %}">Banlist</a>
             </div>
           </nav>
 
