--- a/templates/brawl/show_event.html
+++ b/templates/brawl/show_event.html
@@ -27,6 +27,7 @@
                     <div class="row mx-auto box_body_big main_body">
                         <h2>{{ deck.name }} by {{ deck.player }}</h2>
                         <h3>Place: {{ deck.place }}</h3>
+                        <h3>Record: {{ deck.wins }}-{{ deck.loses }}</h3>
                         {% if deck.commander2 == None %}
                             <h4>Commander: <p class="list_card" id={{deck.commander1imgname}} >{{ deck.commander1 }}</p></h4>
                         {% else %}
