--- a/templates/brawl/show_event.html
+++ b/templates/brawl/show_event.html
@@ -22,7 +22,7 @@
             <h1>Event on {{ date }}</h1>
         </div>
         <div class="row">
-            <div class="col mx-auto main_body">
+            <div class="col mx-auto main_body content_seperator">
                 {% for deck in decks %}
                     <div class="row mx-auto box_body_big main_body">
                         <h2>{{ deck.name }}</h2>
